Fix hover issue with text titles overlapping floating charts

--- a/src/styles.less
+++ b/src/styles.less
@@ -128,9 +128,11 @@ body {
 
 	h2 {
 		margin-top: 2.5rem;
+		clear: both;
 	}
 	h3 {
 		margin-top: 2rem;
+		clear: both;
 	}
 	.half {
 		width: 50%;
